WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55477
m_debuggerAgent not declared in inspector/InspectorAgent.cpp:467
https://bugs.webkit.org/show_bug.cgi?id=55477
Summary
m_debuggerAgent not declared in inspector/InspectorAgent.cpp:467
Oleg Romashin (:romaxa)
Reported
2011-03-01 10:05:42 PST
Created
attachment 84244
[details]
m_debuggerAgent should be under ENABLE(JAVASCRIPT_DEBUGGER) define Build fix
Attachments
m_debuggerAgent should be under ENABLE(JAVASCRIPT_DEBUGGER) define
(914 bytes, patch)
2011-03-01 10:05 PST
,
Oleg Romashin (:romaxa)
kling
: review-
Details
Formatted Diff
Diff
fix compilation without ENABLE(JAVASCRIPT_DEBUGGER)
(1.13 KB, patch)
2011-03-01 13:14 PST
,
Oleg Romashin (:romaxa)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2011-03-01 10:18:42 PST
Comment on
attachment 84244
[details]
m_debuggerAgent should be under ENABLE(JAVASCRIPT_DEBUGGER) define Needs ChangeLog. See
http://www.webkit.org/coding/contributing.html
Oleg Romashin (:romaxa)
Comment 2
2011-03-01 13:14:48 PST
Created
attachment 84282
[details]
fix compilation without ENABLE(JAVASCRIPT_DEBUGGER)
Andreas Kling
Comment 3
2011-03-02 03:22:10 PST
Comment on
attachment 84282
[details]
fix compilation without ENABLE(JAVASCRIPT_DEBUGGER) r=me
WebKit Commit Bot
Comment 4
2011-03-02 05:02:42 PST
Comment on
attachment 84282
[details]
fix compilation without ENABLE(JAVASCRIPT_DEBUGGER) Clearing flags on attachment: 84282 Committed
r80116
: <
http://trac.webkit.org/changeset/80116
>
WebKit Commit Bot
Comment 5
2011-03-02 05:02:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug