2011-03-02  Oleg Romashin  <romaxa@gmail.com>

Reviewed by Andreas Kling.

        Fixing inspector compilation with JAVASCRIPT_DEBUGGER disabled
        https://bugs.webkit.org/show_bug.cgi?id=55477

        * inspector/InspectorAgent.cpp:
        (WebCore::InspectorAgent::populateScriptObjects):

Canonical link: https://commits.webkit.org/70013@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80116 268f45cc-cd09-0410-ab3c-d52691b4dbfc